# FaceDetectionSDK

./: CMakeLists.txt  README.md  face_detection_build.sh
SampleApp/: main.cpp
